[gd_scene load_steps=9 format=3 uid="uid://cn30cc8rjsmrg"]

[ext_resource type="Script" uid="uid://c1qg2ydd8w3y2" path="res://boyama/old_scene/img.gd" id="1_ldtln"]
[ext_resource type="Script" uid="uid://7dfunv4s1a4y" path="res://boyama/old_scene/region_map_generator.gd" id="1_lhw6k"]
[ext_resource type="Shader" uid="uid://bjmtj8a0imeax" path="res://boyama/old_scene/img_world.gdshader" id="3_1cs06"]
[ext_resource type="Texture2D" uid="uid://jljid5y54xse" path="res://boyama/assets/temp_assets/pikachu.png" id="4_nprbr"]
[ext_resource type="Script" uid="uid://cqrnwyajofk04" path="res://boyama/old_scene/outline_sprite.gd" id="5_6n4vp"]
[ext_resource type="Texture2D" uid="uid://cuo257avnf7ms" path="res://boyama/assets/temp_assets/region_preview_fixed.png" id="6_nprbr"]
[ext_resource type="Script" uid="uid://bbpw1neg7ljme" path="res://boyama/grid_container.gd" id="7_og1om"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6n4vp"]
resource_local_to_scene = true
shader = ExtResource("3_1cs06")

[node name="ImgWorld" type="Node2D"]
script = ExtResource("1_lhw6k")

[node name="PaintSprite" type="Sprite2D" parent="."]
position = Vector2(540, 960)
script = ExtResource("1_ldtln")
brush_size = 18

[node name="OutlineSprite" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_6n4vp")
position = Vector2(538, 960)
texture = ExtResource("4_nprbr")
script = ExtResource("5_6n4vp")

[node name="RegionMap" type="Sprite2D" parent="."]
position = Vector2(-1373, 862)
texture = ExtResource("6_nprbr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -310.0
offset_top = -117.0
offset_right = 310.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
columns = 6
script = ExtResource("7_og1om")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(0, 1, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(0, 0, 1, 1)

[node name="ColorRect4" type="ColorRect" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(1, 1, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(1, 0, 1, 1)

[node name="ColorRect6" type="ColorRect" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(0, 1, 1, 1)

[node name="HSlider" type="HSlider" parent="CanvasLayer/Panel"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 70.0
grow_horizontal = 2
min_value = 15.0
max_value = 30.0
value = 18.0

[node name="Button" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 14.0
offset_right = 211.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 41
text = "Geri DÃ¶n"

[connection signal="value_changed" from="CanvasLayer/Panel/HSlider" to="PaintSprite" method="_on_h_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/Panel/Button" to="." method="_on_button_pressed"]
